Corrección de Mensajes de Error y lógica

--- a/src/test_err5.in
+++ b/src/test_err5.in
@@ -1,9 +1,29 @@
-Asignatura NombreA1
-Profesor1
-Alumno1
-Alumno2
-Alumno3
+Asignatura NombreA1 Modelos Discretos
+Profesor1 Fesor
+Alumno1 Mercedes Benz
+Alumno2 Tesla Model X
+Alumno3 Tesla Model Y
 Ayudante Ayudante1
+Asignatura NombreA2
 Profesor2
 Alumno4
 Alumno5
+Asignatura NombreA2
+
+Profesor2
+Alumno4
+Alumno5
+Asignatura NombreA2
+Profesor2
+Alumno4
+Alumno5
+Ayudante Ayudante1
+Asignatura NombreA2
+Profesor2
+Alumno4
+Alumno5
+Asignatura NombreA2
+Profesor2
+Alumno4
+Alumno5
+Ayudante Ayudante1
